tools/data-handler/test/test-data/invalid/invalid-link-type-broken-card-type-ref/.cards/local/reports/testReport/index.adoc.hbs

## Test {{ key3 }}

{{#each results}}
* {{this.title}}
{{/each}}

{{{ createCards '{"buttonLabel": "buttonlabel", "template": "test"}'}}}
